zipios (2.1.4.0~xenial) xenial; urgency=high

  * Replaced readdir_r() with readdir().
  * Removed a throw from a destructor, which g++ now reports with a warning.
  * Fixed a few more "occurred".
  * Moved dependencies, one per line.
  * Fixed position of some vim comments.
  * Bumped copyright notices to 2017.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 19 Feb 2017 22:02:22 -0700

zipios (2.1.3.0~xenial) xenial; urgency=high

  * SNAP-110: Bumped version to get my test system to upgrade properly.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 13 Sep 2016 11:59:22 -0700

zipios (2.1.1~trusty) trusty; urgency=high

  * Fixed a couple of classes initializations that were missing.
  * Fixed a view system() call of which return values were not checked.
  * Added a BUILD_ZIPIOS_TESTS cmake option flag.
  * Fixed reference to README as README.md as it is called now.
  * Allow for ZIPIOS_WINDOWS to compile under MS-Windows.
  * Added an ssize_t definition for Windows.
  * Removed the "catch_" prefix from all test names.
  * Fixed some copyright notices.
  * Cleaned up the coverage script.
  * Added the BUILD_SHARED_LIBS and BUILD_DOCUMENTATION options to cmake.
  * Fixed the FindZipIos.cmake file so it uses the correct names.
  * Also make the destination directory for FindZipIos.cmake a variable.
  * Enhanced the installation directory handling in cmake.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 12 Dec 2015 14:41:42 -0700

zipios (2.1.0~trusty) trusty; urgency=high

  * Renamed the include directory to remove the '++'.
  * Renamed the Debian package "zipios".
  * Added a few scripts to help with publishing a new version of Zipios++.
  * Fixed and added some copyright notices.
  * Fixed the comments in the cmake/* files.
  * Fixed name of zipios_tool as just zipios once installed.

 -- Alexis Wilke <alexis@m2osw.com>  Tue,  5 May 2015 14:20:07 -0700

zipios (2.0.2~trusty) trusty; urgency=high

  * Finished fixing the vim/emacs comments.